@@ -204,6 +204,8 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 26939) Installer does not set $wgMetaNamespace
 * (bug 28166) UploadBase assumes that 'edit' and 'upload' rights are not per
   page restrictions
+* Make truncate function automatically consider length of '...' string,
+  since length can vary by localization.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
